log sql queries with jOOQ

--- a/jooq-101/pom.xml
+++ b/jooq-101/pom.xml
@@ -59,6 +59,14 @@
             <version>${jooq.version}</version>
         </dependency>
 
+        <!-- Logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+
 
     </dependencies>
 
