--- a/jooq-101/pom.xml
+++ b/jooq-101/pom.xml
@@ -73,7 +73,12 @@
             <version>1.2.3</version>
         </dependency>
 
-
+        <!-- Spring.io -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.15.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
@@ -133,6 +138,7 @@
 
                         <generate>
                             <daos>true</daos>
+                            <springAnnotations>true</springAnnotations>
                         </generate>
 
                         <target>
